--- a/src/grupo3/reto2/view/Ventana_evento.fxml
+++ b/src/grupo3/reto2/view/Ventana_evento.fxml
@@ -4,9 +4,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -15,26 +12,26 @@
 
 <Pane fx:id="TableEvent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.EventController">
    <children>
-      <fx:include fx:id="hbox" source="MenuBar.fxml"/>
+      <fx:include fx:id="hbox" source="MenuBar.fxml" />
       <Button fx:id="btnCrear" layoutX="753.0" layoutY="84.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="133.0" text="CREAR EVENTO " />
       <Button fx:id="btnBorrar" layoutX="752.0" layoutY="150.0" mnemonicParsing="false" text="BORRAR EVENTO" />
       <Button fx:id="btnModificar" layoutX="729.0" layoutY="220.0" mnemonicParsing="false" text="MODIFICAR EVENTO" />
-      <TableView fx:id="tvTablaEvento" layoutX="12.0" layoutY="321.0" prefHeight="365.0" prefWidth="638.0">
+      <TableView fx:id="tvTablaEvento" layoutX="12.0" layoutY="321.0" prefHeight="365.0" prefWidth="694.0">
         <columns>
-          <TableColumn fx:id="tcIdEvento" prefWidth="86.0" text="id_evento" />
-          <TableColumn fx:id="tcDescripcion" prefWidth="155.0" text="descripcion" />
-            <TableColumn fx:id="tcFecha" prefWidth="149.0" text="fecha" />
+          <TableColumn fx:id="tcIdEvento" prefWidth="98.0" text="id_evento" />
+          <TableColumn fx:id="tcDescripcion" minWidth="9.0" prefWidth="166.0" text="descripcion" />
+            <TableColumn fx:id="tcFecha" prefWidth="126.0" text="fecha" />
             <TableColumn fx:id="tcPremio" minWidth="0.0" prefWidth="71.0" text="premio" />
-            <TableColumn fx:id="tcTipoEvento" prefWidth="110.0" text="tipo de evento" />
-            <TableColumn fx:id="tcIdLugar" prefWidth="66.0" text="id_lugar" />
+            <TableColumn fx:id="tcTipoEvento" prefWidth="133.0" text="tipo de evento" />
+            <TableColumn fx:id="tcIdLugar" prefWidth="99.0" text="id_lugar" />
         </columns>
       </TableView>
-      <Label layoutX="666.0" layoutY="321.0" text="FILTRAR POR TIPO DE EVENTO" />
-      <ComboBox fx:id="cbFiltroTipoEvento" layoutX="666.0" layoutY="342.0" prefWidth="150.0" />
-      <Label layoutX="666.0" layoutY="427.0" text="FILTRAR POR ID_EVENTO" />
-      <ComboBox fx:id="cbFiltroIdEvento" layoutX="666.0" layoutY="448.0" prefWidth="150.0" />
+      <Label layoutX="719.0" layoutY="321.0" text="FILTRAR POR TIPO DE EVENTO" />
+      <ComboBox fx:id="cbFiltroTipoEvento" layoutX="719.0" layoutY="342.0" prefWidth="150.0" />
+      <Label layoutX="719.0" layoutY="427.0" text="FILTRAR POR ID_EVENTO" />
+      <ComboBox fx:id="cbFiltroIdEvento" layoutX="719.0" layoutY="448.0" prefWidth="150.0" />
       <Separator layoutX="18.0" layoutY="300.0" prefHeight="0.0" prefWidth="864.0" />
-      <TextField fx:id="tfDecripcion" layoutX="34.0" layoutY="128.0" prefHeight="113.0" prefWidth="204.0" />
+      <TextField fx:id="tfDescripcion" layoutX="34.0" layoutY="128.0" prefHeight="113.0" prefWidth="204.0" />
       <Label layoutX="34.0" layoutY="103.0" text="DESCRIPCIÓN" />
       <Label layoutX="284.0" layoutY="103.0" text="FECHA" />
       <Label layoutX="523.0" layoutY="100.0" text="PREMIO" />
@@ -43,8 +40,8 @@
       <TextField fx:id="tfTipoEvento" layoutX="282.0" layoutY="209.0" prefHeight="31.0" prefWidth="179.0" />
       <TextField fx:id="tfIdLugar" layoutX="523.0" layoutY="209.0" prefHeight="31.0" prefWidth="179.0" />
       <Label layoutX="523.0" layoutY="188.0" text="ID DEL LUGAR" />
-      <Button fx:id="btnCerrar" layoutX="753.0" layoutY="641.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="CERRAR" />
-      <Button fx:id="btnSubscribir" layoutX="753.0" layoutY="578.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="SUBSCRIBIRSE" />
+      <Button fx:id="btnCerrar" layoutX="851.0" layoutY="641.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="CERRAR" />
+      <Button fx:id="btnSubscribir" layoutX="851.0" layoutY="578.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="SUBSCRIBIRSE" />
       <DatePicker fx:id="dpFecha" layoutX="282.0" layoutY="128.0" />
 <!--      
       <MenuBar fx:id="menu" layoutX="14.0" layoutY="14.0">
@@ -77,6 +74,6 @@
       <Separator layoutX="-65.0" layoutY="164.0" prefHeight="3.0" prefWidth="166.0" rotate="90.0" />
       <Separator layoutX="-329.0" layoutY="341.0" prefHeight="74.0" prefWidth="330.0" rotate="90.0" />
       <Separator layoutX="629.0" layoutY="164.0" prefHeight="3.0" prefWidth="166.0" rotate="90.0" />
-      <Button fx:id="btnInforme" layoutX="749.0" layoutY="521.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="INFORME" />
+      <Button fx:id="btnInforme" layoutX="851.0" layoutY="521.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="INFORME" />
    </children>
 </Pane>
