commit de crud con filtrado funcional menos con objetivo e informe funcional. Faltan parsear fechas

--- a/src/grupo3/reto2/report/TrainingReport.jrxml
+++ b/src/grupo3/reto2/report/TrainingReport.jrxml
@@ -1,29 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE jasperReport PUBLIC "-//JasperReports//DTD JasperReport//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
-
-<jasperReport name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-    <background>
-        <band/>
-    </background>
-    <title>
-        <band height="79"/>
-    </title>
-    <pageHeader>
-        <band height="35"/>
-    </pageHeader>
-    <columnHeader>
-        <band height="61"/>
-    </columnHeader>
-    <detail>
-        <band height="125"/>
-    </detail>
-    <columnFooter>
-        <band height="45"/>
-    </columnFooter>
-    <pageFooter>
-        <band height="54"/>
-    </pageFooter>
-    <summary>
-        <band height="42"/>
-    </summary>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d549893d-cba8-426c-95ae-22f4b0be40b3">
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
+	<field name="descripcion" class="java.lang.String"/>
+	<field name="duracion" class="java.lang.Integer"/>
+	<field name="fechaPeriod" class="java.util.Date"/>
+	<field name="intensidad" class="java.lang.Integer"/>
+	<field name="repeticion" class="java.lang.Integer"/>
+	<field name="objetivo" class="java.lang.Object"/>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band height="79" splitType="Stretch">
+			<staticText>
+				<reportElement x="189" y="15" width="184" height="64" uuid="21b71fc0-5302-424e-9ab0-539409f2e6cf"/>
+				<textElement>
+					<font size="36"/>
+				</textElement>
+				<text><![CDATA[TRAINING]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="35" splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band height="61" splitType="Stretch">
+			<staticText>
+				<reportElement x="0" y="0" width="93" height="61" uuid="9d620370-6cd7-4941-a8ca-d5aba638ccfa"/>
+				<text><![CDATA[Descripcion]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="93" y="0" width="96" height="61" uuid="a9cbbf54-f5ff-4543-861f-f8bb1a4d3e29"/>
+				<text><![CDATA[Duracion]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="189" y="0" width="99" height="61" uuid="06f902d3-1e35-4962-b6c0-81ad3fb7758d"/>
+				<text><![CDATA[Fecha de entrenamiento]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="288" y="0" width="96" height="61" uuid="d696335d-5c85-48cb-84b3-461c8c4748ca"/>
+				<text><![CDATA[Intensidad]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="384" y="0" width="85" height="61" uuid="ad3007d3-6929-42c2-88a0-6ca2f44652da"/>
+				<text><![CDATA[Repeticion]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="469" y="0" width="86" height="61" uuid="79be9c28-a236-4236-8542-a6c199777f45"/>
+				<text><![CDATA[Objetivo]]></text>
+			</staticText>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="125" splitType="Stretch">
+			<textField>
+				<reportElement x="0" y="0" width="93" height="61" uuid="fe9078a9-0445-49dc-ac94-a67f4945ef93"/>
+				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="188" y="0" width="100" height="61" uuid="ea864fcd-da0a-461a-b8b9-4a8857d3cca9"/>
+				<textFieldExpression><![CDATA[$F{fechaPeriod}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="93" y="0" width="95" height="61" uuid="471d16c8-637b-4631-a1b1-a053845a6fed"/>
+				<textFieldExpression><![CDATA[$F{duracion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="288" y="0" width="96" height="61" uuid="09c9a731-0eab-4b84-a161-1a2c2d45564b"/>
+				<textFieldExpression><![CDATA[$F{intensidad}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="384" y="0" width="85" height="61" uuid="d942b664-73b0-43b1-8582-9d18f09ca34f"/>
+				<textFieldExpression><![CDATA[$F{repeticion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="469" y="0" width="86" height="61" uuid="83bcbf28-5edd-487b-ba50-132da35276df"/>
+				<textFieldExpression><![CDATA[$F{objetivo}]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="45" splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band height="54" splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band height="42" splitType="Stretch"/>
+	</summary>
 </jasperReport>
