--- a/src/grupo3/reto2/view/SignUp.fxml
+++ b/src/grupo3/reto2/view/SignUp.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F4ECCD;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F4ECCD;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.SignUpController">
    <children>
       <TextField fx:id="txtNombre2" layoutX="78.0" layoutY="205.0" prefHeight="42.0" prefWidth="299.0" promptText="Introduzca el nombre de usuario">
          <font>
@@ -96,7 +96,7 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="txtEmail1" layoutX="436.0" layoutY="353.0" prefHeight="42.0" prefWidth="299.0" promptText="Introduzca su email">
+      <TextField fx:id="txtEdad" layoutX="436.0" layoutY="353.0" prefHeight="42.0" prefWidth="299.0" promptText="Introduzca su email">
          <font>
             <Font size="14.0" />
          </font>
