Filtrado por id logrado, sigo con el menuBar

--- a/src/grupo3/reto2/view/Principal.fxml
+++ b/src/grupo3/reto2/view/Principal.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.PrincipalController">
    <children>
       <Label fx:id="lblTexto" layoutX="112.0" layoutY="42.0" prefHeight="145.0" prefWidth="577.0" text="BIENVENIDO A FUERZA G3" textAlignment="CENTER">
          <font>
