--- a/src/grupo3/reto2/view/SignUp.fxml
+++ b/src/grupo3/reto2/view/SignUp.fxml
@@ -91,12 +91,12 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="lblConfirmPasswd1" layoutX="436.0" layoutY="325.0" prefHeight="28.0" prefWidth="202.0" text="EDAD">
+      <Label fx:id="lblEdad" layoutX="436.0" layoutY="325.0" prefHeight="28.0" prefWidth="202.0" text="EDAD">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="txtEmail1" layoutX="436.0" layoutY="353.0" prefHeight="42.0" prefWidth="299.0" promptText="Introduzca su email">
+      <TextField fx:id="txtEdad" layoutX="436.0" layoutY="353.0" prefHeight="42.0" prefWidth="299.0" promptText="Introduzca su edad">
          <font>
             <Font size="14.0" />
          </font>
