--- a/src/grupo3/reto2/view/help.html
+++ b/src/grupo3/reto2/view/help.html
@@ -6,11 +6,49 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Palntilla html</title>
+        <style type="text/css">
+            body{
+                background-color: beige;
+                align-items: center;
+                margin: 50px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+            div.cuerpo{
+                margin: 20px;
+                margin-top: 30px;
+                align-content: center;
+            }
+            img{
+                
+                width: 700px;
+                height: 500px;
+            }
+            hr{
+                border-collapse: collapse;
+                border: 2px solid white;
+                border-radius: 5px;
+            }
+            p.destaca{
+                color: #3EFA18;
+            }
+            p{
+                text-align: center;
+            }
+            
+        </style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>HOLAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</h1>
+        <hr>
+        <h1 align="Center">Pon el nombre de tu ventana aquí</h1>
+        <hr>
+        <div class="cuerpo">
+            <center><p class="destaca">Fig x: Texto para meter</p><img src ="nombrecapturaimg.png" alt= "alterno"></center>
+            
+        </div>
+        
     </body>
 </html>
