--- a/src/grupo3/reto2/view/Training.fxml
+++ b/src/grupo3/reto2/view/Training.fxml
@@ -52,5 +52,6 @@
       <Button fx:id="btnInforme" layoutX="38.0" layoutY="652.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="INFORME" />
       <TextField fx:id="txtFilter" layoutX="865.0" layoutY="338.0" prefHeight="25.0" prefWidth="112.0" />
       <Button fx:id="btnFilter" layoutX="907.0" layoutY="372.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Buscar" />
+      <Button fx:id="btnAyuda" layoutX="849.0" layoutY="565.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="AYUDA" />
    </children>
 </Pane>
