CRUDs juntados, hora de hacer útimas pruebas

--- a/src/grupo3/reto2/view/Recuperar contraseña.fxml
+++ b/src/grupo3/reto2/view/Recuperar contraseña.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.RecuperarPasswdController">
    <children>
       <Label layoutX="105.0" layoutY="42.0" prefHeight="50.0" prefWidth="390.0" text="RECUPERAR DE CONTRASEÑA">
          <font>
