ayuda de lugar  menu actualizado

--- a/src/grupo3/reto2/view/MenuBar.fxml
+++ b/src/grupo3/reto2/view/MenuBar.fxml
@@ -5,33 +5,26 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox fx:id="hbox" maxHeight="30.0" maxWidth="1000.0" minHeight="30.0" minWidth="1000.0" prefHeight="30.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:id="hbox" maxHeight="30.0" maxWidth="1000.0" prefHeight="30.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.MenuBarController">
    <children>
-      <MenuBar fx:id="menuBar" prefHeight="32.0" prefWidth="1000.0">
+      <MenuBar fx:id="menuBar" prefHeight="30.0" prefWidth="1000.0">
         <menus>
-          <Menu fx:id="menuHome" mnemonicParsing="false" text="Home">
+          <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#menuHome" text="Home">
             <items>
               <MenuItem fx:id="miVolver" mnemonicParsing="false" text="Volver a la principal" />
             </items>
           </Menu>
           <Menu fx:id="menuNavegar" mnemonicParsing="false" text="Navegar">
             <items>
-                  <MenuItem fx:id="miEvento" mnemonicParsing="false" text="Evento" />
-                  <MenuItem fx:id="miEntrenamiento" mnemonicParsing="false" text="Entrenamiento" />
-              <MenuItem fx:id="miLugar" mnemonicParsing="false" text="Lugar" />
-                  <MenuItem fx:id="miObjetivo" mnemonicParsing="false" text="Objetivo" />
-            </items>
-          </Menu>
-          <Menu fx:id="menuAyuda" mnemonicParsing="false" text="Ayuda">
-            <items>
-                  <MenuItem fx:id="miDescripcionVentana" mnemonicParsing="false" text="Descripcion de la ventana" />
-              <MenuItem fx:id="miManualUsuario" mnemonicParsing="false" text="Manual de usuario" />
-                  <MenuItem fx:id="miSobreNosotros" mnemonicParsing="false" text="Sobre Fuerza_G3..." />
+                  <MenuItem fx:id="miEvento" mnemonicParsing="false" onAction="#miLugar" text="Evento" />
+                  <MenuItem fx:id="miEntrenamiento" mnemonicParsing="false" onAction="#miEntrenamiento" text="Entrenamiento" />
+              <MenuItem fx:id="miLugar" mnemonicParsing="false" onAction="#miLugar" text="Lugar" />
+                  <MenuItem fx:id="miObjetivo" mnemonicParsing="false" onAction="#miObjetivo" text="Objetivo" />
             </items>
           </Menu>
             <Menu fx:id="menuCR" mnemonicParsing="false" text="Cerrar sesión">
               <items>
-                <MenuItem fx:id="miCerrarSesion" mnemonicParsing="false" text="Cerrar sesión" />
+                <MenuItem fx:id="miCerrarSesion" mnemonicParsing="false" onAction="#miCerrarSesion" text="Cerrar sesión" />
               </items>
             </Menu>
         </menus>
